--- a/Registration Form.html
+++ b/Registration Form.html
@@ -20,8 +20,8 @@
 
 <tr>
 <td>DATE OF BIRTH</td>
-<td>select>
-<option>DAE</option>
+<td><select>
+<option>DAY</option>
 <option>1</option>
 <option>2</option>
 <option>3</option>
@@ -84,7 +84,7 @@
 
 <tr>
 <td>EMAIL ID</td>
-<td>>input type="text" name="Email Id" maxlength="20"></td>
+<td><input type="text" name="Email Id" maxlength="20"></td>
 </tr>
 
 <tr>
@@ -94,19 +94,54 @@
 
 <tr>
 <td>GENDER</td>
+<td><input type="radio" name="gender" value="male">male
+<input type="radio" name="gender" value="female">female</td>
+</tr>
+
+<tr>
+<td>ADDRESS</td>
+<td><input type="text" name="Address" maxlength="20"></td>
+</tr>
+
+
+<tr>
+<td>CITY</td>
+<td><input type="text" name="City" maxlength="20"></td>
+</tr>
+
+<tr>
+<td>PINCODE</td>
+<td><input type="text" name="Pincode" maxlength="20"></td>
+</tr>
+
+
+<tr>
+<td>STATE</td>
+<td><input type="text" name="State" maxlength="20"></td>
+</tr>
 
 
 
+<tr>
+<td>COUNTRY</td>
+<td><input type="text" name="Country" maxlength="20"></td>
+</tr>
 
 
+<tr>
+<td>HOBBIES</td>
+<td><input type="checkbox" name="hobbies" value="Singing">singing
+<input type="Checkbox" name="hobbies" value="Dancing">dancing
+<input type="Checkbox" name="hobbies" vale="Others">others</td>
+</tr>
 
 
-
-
-
-
-
-
+<tr>
+<td>COURSE APPLID FOR</td>
+<td><input type="radio" name="course applied for" value="BCA">BCA
+<td><input type="radio" name="course applied for" value="Bcom">Bcom
+<td><input type="radio" name="course applied for" value="Biotech">Biotech maxlength="20"></td>
+</tr>
 
 
 
