--- a/form.html
+++ b/form.html
@@ -1,13 +1,40 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>APPLICATION FORM</title>
 </head>
 <body>
+<h1>Application Form</h1>
+<h2>MAR ATHANASIOUS COLLEGE FOR ADVANCED STUDIES THIRUVALLA</h2>
 <form>
-Firstname :<input typr="text" id="fname" name="fname">
-<br>
-Lastname :<input type="text" id="lname" name="lname">
+<label for="Full Name">Full Name:</label>
+<input type="text" id="fullName" name="fullName"><br><br>
+<label for="Address">Address:</label>
+<textarea  id="Address" name="Address" rows="3" ></textarea><br><br>
+
+<label for="age">Age</label>
+<input type="text" id="age" name="age"><br><br>
+
+<label for ="Gender:">Gender:</label>
+<input type ="radio" id="Gen" name="male">Male
+<input type="radio" id="Gen" name="female">Female
+<input type="radio" id="Gen" name="other">Others
+<br><br>
+
+<label for="dob">Date of Birth</label>
+<input type="date" id="dob" name="dob"><br><br>
+
+<label for="num">Phone Number</label>
+<input type="text" id="num" maxlength="10" name="num"><br><br>
+
+<label for="email">Email Address</label>
+<input type="email" id="email" name="email"><br><br>
+
+<label for="course">Course Applied For</label>
+<input type="text" id="course" name="course"><br><br>
+
+<input type="Submit" Value="Submit">
+<input type="Reset" Value="Reset ">
 </form>
 </body>
 </html>
+           
